# UGV_Firmware

./: .gitignore  CMakeLists.txt  README.md  main.c
ESP-pg/Websockets/: README.md  Server.py  Server_echo_broadcast.py  Server_old.py  client.py  python_ota_server.py
UGV-ESP/: UGV-ESP.ino
UGV-ESP/Old/: UGV-ESP.ino
UGV-ESP/UGV-ESP/: UGV-ESP.ino  network_defines.hpp  testData.hpp
UGV-ESP/UGV-ESP-CHAIN/: UGV-ESP-CHAIN.ino  network_defines.hpp
UGV-ESP/UGV-ESP-V2/: UGV-ESP-V2.ino  network_defines.hpp
UGV-ESP/lib/: ESP_UARTManager.hpp  network_defines.h  uart_test_helpers.hpp
UGV-PICO/: CMakeLists.txt  LICENSE  main.cpp  pico_sdk_import.cmake
UGV-PICO/dev/: uart_echo_test.h
UGV-PICO/lib/: MotorControl.hpp  PICO_UARTManager.hpp  PathLoader.hpp  PurePursuit.hpp  QuadEncoder.hpp  ServoControl.hpp  TestPath.hpp  UARTManager.hpp  hw_defines.h  uart_manager.h
UGV-PICO/lib/DiffDriveBase/: CMakeLists.txt  DifferentialDrive.cpp  DifferentialDrive.hpp  DriveConstants.hpp  DriveHWConstants.hpp  MotorControl.hpp  QuadEncoder.hpp  hw_defines.h  number_constants.h
UGV-PICO/lib/DiffDriveBase/DiffDriveOdom/: CMakeLists.txt  DifferentialDriveOdometry.cpp  DifferentialDriveOdometry.hpp
UGV-PICO/lib/DiffDriveBase/MemoryFilter/: MemFilt.hpp
UGV-PICO/lib/DiffDriveBase/MotorControl/: CMakeLists.txt  MotorControl.cpp  MotorControl.hpp
UGV-PICO/lib/DiffDriveBase/PICO_BMX160/: CMakeLists.txt  PICO_DFRobot_BMX160.cpp  PICO_DFRobot_BMX160.h  PICO_IMU.cpp  PICO_IMU.hpp
UGV-PICO/lib/DiffDriveBase/PIDController/: CMakeLists.txt  PIDController.cpp  PIDController.hpp
UGV-PICO/lib/DiffDriveBase/QuadEncoder/: CMakeLists.txt  QuadEncoder.cpp  QuadEncoder.hpp
UGV-PICO/lib/DiffDriveOdom/: CMakeLists.txt  DifferentialDriveOdometry.cpp  DifferentialDriveOdometry.hpp
UGV-PICO/lib/GeometryUtils/: CMakeLists.txt  GeometryUtils.cpp  GeometryUtils.hpp
UGV-PICO/lib/PICO_BMX160/: CMakeLists.txt  PICO_DFRobot_BMX160.cpp  PICO_DFRobot_BMX160.h  PICO_IMU.hpp
UGV-PICO/lib/PIDController/: CMakeLists.txt
UGV-PICO/lib/SlewRateLimiter/: CMakeLists.txt  SlewRateLimiter.cpp  SlewRateLimiter.hpp
common_lib/: network_defines.h  network_defines.hpp
(+1 files in other folders)
