
add_subdirectory(DiffDriveOdom)
add_subdirectory(PIDController)
add_subdirectory(PICO_BMX160)
add_subdirectory(QuadEncoder)
add_subdirectory(MotorControl)

add_library(diff_drive DifferentialDrive.hpp DifferentialDrive.cpp)


target_link_libraries(diff_drive geometry_utils diff_drive_odom pico_bmx160 pid_controller motor_control quad_enc hardware_pwm hardware_gpio pico_stdlib )